[package]
name = "bifrost-node"
version = "0.21.0"
edition = "2024"

[[bin]]
name = "bifrost"
path = "src/main.rs"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }

polkadot-omni-node-lib = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

[build-dependencies]
substrate-build-script-utils = "11.0.0"
orml-build-script-utils = "1.2.1"
ureq = "3.0.3"

[profile.release]
lto = true
codegen-units = 1
